--- a/UntitledFinanceTracker/UntitledFinanceTracker.csproj
+++ b/UntitledFinanceTracker/UntitledFinanceTracker.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="ToggleSwitch" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
